@@ -3,6 +3,8 @@ Version: 2.4.2
 Date: ????
   Changes:
     - debug logging is now controlled by an int setting to provide different levels of logging.
+  Bugfixes:
+    - fix crash when another mod adds a temporary refueling record at the beginning of the schedule
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.1
 Date: 2025-09-27
